moved IDEA and Eclipse configuration into dedicated build scripts